--- a/8100.config
+++ b/8100.config
@@ -2746,7 +2746,7 @@ CONFIG_PACKAGE_kmod-usb-core=y
 # CONFIG_PACKAGE_kmod-usb-dwc3 is not set
 # CONFIG_PACKAGE_kmod-usb-hid is not set
 # CONFIG_PACKAGE_kmod-usb-hid-cp2112 is not set
-# CONFIG_PACKAGE_kmod-usb-ledtrig-usbport is not set
+CONFIG_PACKAGE_kmod-usb-ledtrig-usbport=y
 # CONFIG_PACKAGE_kmod-usb-net is not set
 # CONFIG_PACKAGE_kmod-usb-net-aqc111 is not set
 # CONFIG_PACKAGE_kmod-usb-net-asix is not set
@@ -2776,7 +2776,7 @@ CONFIG_PACKAGE_kmod-usb-core=y
 # CONFIG_PACKAGE_kmod-usb-net-sr9700 is not set
 # CONFIG_PACKAGE_kmod-usb-ohci is not set
 # CONFIG_PACKAGE_kmod-usb-ohci-pci is not set
-CONFIG_PACKAGE_kmod-usb-printer=y
+# CONFIG_PACKAGE_kmod-usb-printer is not set
 # CONFIG_PACKAGE_kmod-usb-serial is not set
 # CONFIG_PACKAGE_kmod-usb-serial-ark3116 is not set
 # CONFIG_PACKAGE_kmod-usb-serial-belkin is not set
@@ -2898,142 +2898,87 @@ CONFIG_PACKAGE_kmod-usb3=y
 # CONFIG_PACKAGE_kmod-mt7601u is not set
 # CONFIG_PACKAGE_kmod-mt7601u-ap is not set
 # CONFIG_PACKAGE_kmod-mt7603 is not set
-# CONFIG_PACKAGE_kmod-mt7603e is not set
-# CONFIG_PACKAGE_kmod-mt7615-firmware is not set
-CONFIG_PACKAGE_kmod-mt7615d=y
-CONFIG_MTK_SUPPORT_OPENWRT=y
-CONFIG_MTK_WIFI_DRIVER=y
-CONFIG_MTK_FIRST_IF_MT7615E=y
-# CONFIG_MTK_FIRST_IF_MT7622 is not set
-# CONFIG_MTK_FIRST_IF_MT7626 is not set
-# CONFIG_MTK_FIRST_IF_NONE is not set
-# CONFIG_MTK_SECOND_IF_NONE is not set
-CONFIG_MTK_SECOND_IF_MT7615E=y
-CONFIG_MTK_THIRD_IF_NONE=y
-# CONFIG_MTK_THIRD_IF_MT7615E is not set
-CONFIG_MTK_RT_FIRST_CARD=7615
-CONFIG_MTK_RT_SECOND_CARD=7615
-CONFIG_MTK_RT_FIRST_IF_RF_OFFSET=0xc0000
-CONFIG_MTK_RT_SECOND_IF_RF_OFFSET=0xc8000
-CONFIG_MTK_MT_WIFI=y
-CONFIG_MTK_MT_WIFI_PATH="mt_wifi"
+CONFIG_PACKAGE_kmod-mt7603e=y
+CONFIG_MT7603E_FIRST_IF_MT7603E=y
+CONFIG_MT7603E_RLT_WIFI=y
+CONFIG_MT7603E_MT_WIFI_PATH="rlt_wifi"
 
 #
 # WiFi Generic Feature Options
 #
-CONFIG_MTK_FIRST_IF_EEPROM_FLASH=y
-# CONFIG_MTK_FIRST_IF_EEPROM_PROM is not set
-# CONFIG_MTK_FIRST_IF_EEPROM_EFUSE is not set
-CONFIG_MTK_RT_FIRST_CARD_EEPROM="flash"
-CONFIG_MTK_SECOND_IF_EEPROM_FLASH=y
-# CONFIG_MTK_SECOND_IF_EEPROM_PROM is not set
-# CONFIG_MTK_SECOND_IF_EEPROM_EFUSE is not set
-CONFIG_MTK_RT_SECOND_CARD_EEPROM="flash"
-CONFIG_MTK_MULTI_INF_SUPPORT=y
-CONFIG_MTK_WIFI_BASIC_FUNC=y
-CONFIG_MTK_DOT11_N_SUPPORT=y
-CONFIG_MTK_DOT11_VHT_AC=y
-CONFIG_MTK_G_BAND_256QAM_SUPPORT=y
-CONFIG_MTK_TPC_SUPPORT=y
-CONFIG_MTK_ICAP_SUPPORT=y
-CONFIG_MTK_SPECTRUM_SUPPORT=y
-CONFIG_MTK_BACKGROUND_SCAN_SUPPORT=y
-CONFIG_MTK_SMART_CARRIER_SENSE_SUPPORT=y
-CONFIG_MTK_MT_DFS_SUPPORT=y
-# CONFIG_MTK_OFFCHANNEL_SCAN_FEATURE is not set
-# CONFIG_MTK_DPP_SUPPORT is not set
-CONFIG_MTK_HDR_TRANS_TX_SUPPORT=y
-CONFIG_MTK_HDR_TRANS_RX_SUPPORT=y
-# CONFIG_MTK_DBDC_MODE is not set
-CONFIG_MTK_WSC_INCLUDED=y
-CONFIG_MTK_WSC_V2_SUPPORT=y
-CONFIG_MTK_DOT11W_PMF_SUPPORT=y
-CONFIG_MTK_TXBF_SUPPORT=y
-# CONFIG_MTK_FAST_NAT_SUPPORT is not set
-# CONFIG_MTK_FTM_SUPPORT is not set
-# CONFIG_MTK_MBO_SUPPORT is not set
-CONFIG_MTK_IGMP_SNOOP_SUPPORT=y
-CONFIG_MTK_RTMP_FLASH_SUPPORT=y
-CONFIG_MTK_PRE_CAL_TRX_SET1_SUPPORT=y
-CONFIG_MTK_RLM_CAL_CACHE_SUPPORT=y
-CONFIG_MTK_PRE_CAL_TRX_SET2_SUPPORT=y
-# CONFIG_MTK_RF_LOCKDOWN_SUPPORT is not set
-# CONFIG_MTK_LINK_TEST_SUPPORT is not set
-CONFIG_MTK_ATE_SUPPORT=y
-# CONFIG_MTK_PASSPOINT_R2 is not set
-CONFIG_MTK_UAPSD=y
-CONFIG_MTK_TCP_RACK_SUPPORT=y
-CONFIG_MTK_RED_SUPPORT=y
-# CONFIG_MTK_FDB_SUPPORT is not set
-CONFIG_MTK_FIRST_IF_IPAILNA=y
-# CONFIG_MTK_FIRST_IF_IPAELNA is not set
-# CONFIG_MTK_FIRST_IF_EPAELNA is not set
-CONFIG_MTK_SECOND_IF_IPAILNA=y
-# CONFIG_MTK_SECOND_IF_IPAELNA is not set
-# CONFIG_MTK_SECOND_IF_EPAELNA is not set
-# CONFIG_MTK_RLT_MAC is not set
-# CONFIG_MTK_RTMP_MAC is not set
+CONFIG_MT7603E_FIRST_IF_EEPROM_FLASH=y
+# CONFIG_MT7603E_FIRST_IF_EEPROM_PROM is not set
+# CONFIG_MT7603E_FIRST_IF_EEPROM_EFUSE is not set
+CONFIG_MT7603E_RT_FIRST_CARD_EEPROM="flash"
+CONFIG_MT7603E_MULTI_INF_SUPPORT=y
+CONFIG_MT7603E_WSC_INCLUDED=y
+# CONFIG_MT7603E_WSC_NFC_SUPPORT is not set
+CONFIG_MT7603E_DOT11N_DRAFT3=y
+CONFIG_MT7603E_DOT11W_PMF_SUPPORT=y
+# CONFIG_MT7603E_TXBF_SUPPORT is not set
+CONFIG_MT7603E_LLTD_SUPPORT=y
+# CONFIG_MT7603E_QOS_DLS_SUPPORT is not set
+# CONFIG_MT7603E_WAPI_SUPPORT is not set
+# CONFIG_MT7603E_CARRIER_DETECTION_SUPPORT is not set
+# CONFIG_MT7603E_IGMP_SNOOP_SUPPORT is not set
+# CONFIG_MT7603E_BLOCK_NET_IF is not set
+CONFIG_MT7603E_NEW_RATE_ADAPT_SUPPORT=y
+CONFIG_MT7603E_MT_NEW_RATE_ADAPT_SUPPORT=y
+# CONFIG_MT7603E_IDS_SUPPORT is not set
+# CONFIG_MT7603E_WIFI_WORK_QUEUE is not set
+# CONFIG_MT7603E_WIFI_SKB_RECYCLE is not set
+CONFIG_MT7603E_RTMP_FLASH_SUPPORT=y
+# CONFIG_MT7603E_LED_CONTROL_SUPPORT is not set
+# CONFIG_MT7603E_SINGLE_SKU is not set
+CONFIG_MT7603E_ATE_SUPPORT=y
+CONFIG_MT7603E_RT2860V2_AP_V24_DATA_STRUCTURE=y
+# CONFIG_MT7603E_MEMORY_OPTIMIZATION is not set
+# CONFIG_MT7603E_HOTSPOT is not set
+# CONFIG_MT7603E_MT_RTMP_TEMPERATURE_TX_ALC is not set
+CONFIG_MT7603E_UAPSD=y
+# CONFIG_MT7603E_RLT_MAC is not set
+CONFIG_MT7603E_RTMP_PCI_SUPPORT=y
 # end of WiFi Generic Feature Options
 
 #
 # WiFi Operation Modes
 #
-CONFIG_MTK_WIFI_MODE_AP=y
-# CONFIG_MTK_WIFI_MODE_STA is not set
-# CONFIG_MTK_WIFI_MODE_BOTH is not set
-CONFIG_MTK_MT_AP_SUPPORT=y
-CONFIG_MTK_WDS_SUPPORT=y
-CONFIG_MTK_WIFI_EAP_FEATURE=y
-# CONFIG_MTK_MLME_MULTI_QUEUE_SUPPORT is not set
-CONFIG_MTK_MBSS_SUPPORT=y
-CONFIG_MTK_APCLI_SUPPORT=y
-# CONFIG_MTK_APCLI_CERT_SUPPORT is not set
-CONFIG_MTK_MAC_REPEATER_SUPPORT=y
-# CONFIG_MTK_MWDS is not set
-CONFIG_MTK_MUMIMO_SUPPORT=y
-CONFIG_MTK_MU_RA_SUPPORT=y
-CONFIG_MTK_DOT11R_FT_SUPPORT=y
-CONFIG_MTK_DOT11K_RRM_SUPPORT=y
-CONFIG_MTK_INTERWORKING=y
-# CONFIG_MTK_MAP_SUPPORT is not set
-CONFIG_MTK_OCE_SUPPORT=y
-# CONFIG_MTK_ENTERPRISE_AP_SUPPORT is not set
-# CONFIG_MTK_CFG80211_SUPPORT is not set
-# CONFIG_MTK_MBSS_AS_WDS_AP_SUPPORT is not set
-# CONFIG_MTK_DSCP_QOS_MAP_SUPPORT is not set
-# CONFIG_MTK_DSCP_PRI_SUPPORT is not set
-# CONFIG_MTK_MIN_PHY_RATE_SUPPORT is not set
-# CONFIG_MTK_FAST_UP_RATE_SUPPORT is not set
-# CONFIG_MTK_CON_WPS_SUPPORT is not set
-CONFIG_MTK_MCAST_RATE_SPECIFIC=y
-CONFIG_MTK_VOW_SUPPORT=y
-CONFIG_MTK_FQ_SCH_SUPPORT=y
-CONFIG_MTK_BAND_STEERING=y
-# CONFIG_MTK_LED_CONTROL_SUPPORT is not set
-# CONFIG_MTK_WLAN_HOOK is not set
-# CONFIG_MTK_RADIUS_ACCOUNTING_SUPPORT is not set
-CONFIG_MTK_GREENAP_SUPPORT=y
-CONFIG_MTK_PCIE_ASPM_DYM_CTRL_SUPPORT=y
-# CONFIG_MTK_COEX_SUPPORT is not set
-# CONFIG_MTK_EASY_SETUP_SUPPORT is not set
-# CONFIG_MTK_EVENT_NOTIFIER_SUPPORT is not set
-# CONFIG_MTK_AIR_MONITOR is not set
-CONFIG_MTK_WNM_SUPPORT=y
-CONFIG_MTK_WIFI_MSI_SUPPORT=y
-CONFIG_MTK_WPA3_SUPPORT=y
-CONFIG_MTK_OWE_SUPPORT=y
-# CONFIG_MTK_VENDOR_FEATURE10_SUPPORT is not set
-# CONFIG_MTK_VENDOR_FEATURE11_SUPPORT is not set
-# CONFIG_MTK_RCSA_SUPPORT is not set
+CONFIG_MT7603E_MT_WIFI_MODE_AP=y
+# CONFIG_MT7603E_MT_WIFI_MODE_STA is not set
+# CONFIG_MT7603E_MT_WIFI_MODE_BOTH is not set
+CONFIG_MT7603E_RLT_AP_SUPPORT=y
+# CONFIG_MT7603E_WDS_SUPPORT is not set
+CONFIG_MT7603E_MBSS_SUPPORT=y
+# CONFIG_MT7603E_NEW_MBSSID_MODE is not set
+# CONFIG_MT7603E_CFG80211_SUPPORT is not set
+# CONFIG_MT7603E_ALL_NET_EVENT is not set
+# CONFIG_MT7603E_ACL_V2_SUPPORT is not set
+CONFIG_MT7603E_APCLI_SUPPORT=y
+CONFIG_MT7603E_MULTI_APCLI_SUPPORT=y
+CONFIG_MT7603E_MAC_REPEATER_SUPPORT=y
+# CONFIG_MT7603E_AIRPLAY_SUPPORT is not set
+# CONFIG_MT7603E_DFS_SUPPORT is not set
+# CONFIG_MT7603E_NINTENDO_AP is not set
+# CONFIG_MT7603E_COC_SUPPORT is not set
+# CONFIG_MT7603E_MCAST_RATE_SPECIFIC is not set
+# CONFIG_MT7603E_PREVENT_ARP_SPOOFING_SUPPORT is not set
+# CONFIG_MT7603E_MULTI_CORE_SUPPORT is not set
+# CONFIG_MT7603E_SNIFFER_SUPPORT is not set
+# CONFIG_MT7603E_DOT11R_FT_SUPPORT is not set
+# CONFIG_MT7603E_DOT11K_RRM_SUPPORT is not set
+# CONFIG_MT7603E_WNM_SUPPORT is not set
+# CONFIG_MT7603E_BAND_STEERING_7603 is not set
+# CONFIG_MT7603E_SECURITY_IMPROVEMENT_SUPPORT is not set
+# CONFIG_MT7603E_WPA3_SUPPORT is not set
+# CONFIG_MT7603E_OWE_SUPPORT is not set
+CONFIG_MT7603E_NEW_BW2040_COEXIST_SUPPORT=y
 # end of WiFi Operation Modes
 
-CONFIG_MTK_WIFI_MT_MAC=y
-# CONFIG_MTK_CHIP_MT7603E is not set
-CONFIG_MTK_CHIP_MT7615E=y
-# CONFIG_MTK_CHIP_MT7622 is not set
-# CONFIG_MTK_CHIP_MT7663E is not set
-# CONFIG_MTK_CHIP_MT7626 is not set
-CONFIG_MTK_MT_MAC=y
+CONFIG_MT7603E_RALINK_MT7603E=y
+CONFIG_MT7603E_MT_MAC=y
+# CONFIG_PACKAGE_kmod-mt7615-firmware is not set
+# CONFIG_PACKAGE_kmod-mt7615d is not set
+# CONFIG_MTK_CHIP_MT7615E is not set
 # CONFIG_PACKAGE_kmod-mt7615e is not set
 # CONFIG_PACKAGE_kmod-mt7663-firmware-ap is not set
 # CONFIG_PACKAGE_kmod-mt7663-firmware-sta is not set
@@ -3042,7 +2987,18 @@ CONFIG_MTK_MT_MAC=y
 # CONFIG_PACKAGE_kmod-mt76x0e is not set
 # CONFIG_PACKAGE_kmod-mt76x0u is not set
 # CONFIG_PACKAGE_kmod-mt76x2 is not set
-# CONFIG_PACKAGE_kmod-mt76x2e is not set
+CONFIG_PACKAGE_kmod-mt76x2e=y
+CONFIG_MT76X2E_RT_SECOND_IF_MT7612E=y
+CONFIG_MT76X2E_RT_FIRST_CARD=7603
+CONFIG_MT76X2E_RT_SECOND_CARD=7612
+CONFIG_MT76X2E_AP_LED=y
+CONFIG_MT76X2E_AP_LLTD=y
+CONFIG_MT76X2E_AP_WDS=y
+CONFIG_MT76X2E_AP_MBSS=y
+CONFIG_MT76X2E_AP_MBSS_NEW_MBSSID_MODE=y
+CONFIG_MT76X2E_AP_APCLI=y
+CONFIG_MT76X2E_AP_80211AC_VHT=y
+# CONFIG_MT76X2E_AP_TXBF_SUPPORT is not set
 # CONFIG_PACKAGE_kmod-mt76x2u is not set
 # CONFIG_PACKAGE_kmod-mt7915e is not set
 # CONFIG_PACKAGE_kmod-mt7921e is not set
@@ -3158,14 +3114,14 @@ CONFIG_PACKAGE_libiwinfo-lua=y
 CONFIG_PACKAGE_lua=y
 # CONFIG_PACKAGE_lua-bencode is not set
 # CONFIG_PACKAGE_lua-bit32 is not set
-CONFIG_PACKAGE_lua-cjson=y
+# CONFIG_PACKAGE_lua-cjson is not set
 # CONFIG_PACKAGE_lua-copas is not set
 # CONFIG_PACKAGE_lua-coxpcall is not set
 # CONFIG_PACKAGE_lua-cs-bouncer is not set
 # CONFIG_PACKAGE_lua-curl-v3 is not set
 # CONFIG_PACKAGE_lua-examples is not set
 # CONFIG_PACKAGE_lua-lzlib is not set
-CONFIG_PACKAGE_lua-maxminddb=y
+# CONFIG_PACKAGE_lua-maxminddb is not set
 # CONFIG_PACKAGE_lua-md5 is not set
 # CONFIG_PACKAGE_lua-mobdebug is not set
 # CONFIG_PACKAGE_lua-mosquitto is not set
@@ -3192,7 +3148,7 @@ CONFIG_PACKAGE_lua-neturl=y
 # CONFIG_PACKAGE_luarocks is not set
 # CONFIG_PACKAGE_luasec is not set
 # CONFIG_PACKAGE_luasoap is not set
-CONFIG_PACKAGE_luasocket=y
+# CONFIG_PACKAGE_luasocket is not set
 # CONFIG_PACKAGE_luasocket5.3 is not set
 # CONFIG_PACKAGE_luasql-mysql is not set
 # CONFIG_PACKAGE_luasql-pgsql is not set
@@ -4440,7 +4396,7 @@ CONFIG_PACKAGE_liblua=y
 # CONFIG_PACKAGE_liblzo is not set
 # CONFIG_PACKAGE_libmad is not set
 # CONFIG_PACKAGE_libmagic is not set
-CONFIG_PACKAGE_libmaxminddb=y
+# CONFIG_PACKAGE_libmaxminddb is not set
 # CONFIG_PACKAGE_libmbim is not set
 # CONFIG_PACKAGE_libmcrypt is not set
 # CONFIG_PACKAGE_libmicrohttpd-no-ssl is not set
@@ -4458,7 +4414,7 @@ CONFIG_PACKAGE_libmnl=y
 # CONFIG_PACKAGE_libmpeg2 is not set
 # CONFIG_PACKAGE_libmpg123 is not set
 # CONFIG_PACKAGE_libnatpmp is not set
-CONFIG_PACKAGE_libncurses=y
+# CONFIG_PACKAGE_libncurses is not set
 # CONFIG_PACKAGE_libndpi is not set
 # CONFIG_PACKAGE_libneon is not set
 # CONFIG_PACKAGE_libnet-1.2.x is not set
@@ -4533,7 +4489,7 @@ CONFIG_PACKAGE_libpcre=y
 # CONFIG_PACKAGE_libqrtr-glib is not set
 # CONFIG_PACKAGE_libquickjs is not set
 # CONFIG_PACKAGE_libradcli is not set
-CONFIG_PACKAGE_libreadline=y
+# CONFIG_PACKAGE_libreadline is not set
 # CONFIG_PACKAGE_libredblack is not set
 # CONFIG_PACKAGE_librouteros is not set
 # CONFIG_PACKAGE_libroxml is not set
@@ -4680,7 +4636,7 @@ CONFIG_PACKAGE_rpcd-mod-rrdns=y
 # CONFIG_PACKAGE_sbc is not set
 # CONFIG_PACKAGE_serdisplib is not set
 # CONFIG_PACKAGE_taglib is not set
-CONFIG_PACKAGE_terminfo=y
+# CONFIG_PACKAGE_terminfo is not set
 # CONFIG_PACKAGE_tinycdb is not set
 # CONFIG_PACKAGE_totem-pl-parser is not set
 # CONFIG_PACKAGE_uw-imap is not set
@@ -4979,12 +4935,12 @@ CONFIG_PACKAGE_luci-app-turboacc-mtk_INCLUDE_PDNSD=y
 # CONFIG_PACKAGE_luci-app-unblockneteasemusic-go is not set
 # CONFIG_PACKAGE_luci-app-unbound is not set
 CONFIG_PACKAGE_luci-app-upnp=y
-CONFIG_PACKAGE_luci-app-usb-printer=y
+# CONFIG_PACKAGE_luci-app-usb-printer is not set
 # CONFIG_PACKAGE_luci-app-usb3disable is not set
 # CONFIG_PACKAGE_luci-app-uugamebooster is not set
 # CONFIG_PACKAGE_luci-app-v2ray-server is not set
 # CONFIG_PACKAGE_luci-app-verysync is not set
-CONFIG_PACKAGE_luci-app-vlmcsd=y
+# CONFIG_PACKAGE_luci-app-vlmcsd is not set
 # CONFIG_PACKAGE_luci-app-vnstat is not set
 # CONFIG_PACKAGE_luci-app-vpn-policy-routing is not set
 # CONFIG_PACKAGE_luci-app-vpnbypass is not set
@@ -4992,9 +4948,9 @@ CONFIG_PACKAGE_luci-app-vlmcsd=y
 # CONFIG_PACKAGE_luci-app-vssr is not set
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Hysteria is not set
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Kcptun is not set
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ShadowsocksR_Libev_Server=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray=y
+# CONFIG_PACKAGE_luci-app-vssr_INCLUDE_ShadowsocksR_Libev_Server is not set
+# CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Trojan is not set
+# CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray is not set
 # CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray_plugin is not set
 # CONFIG_PACKAGE_luci-app-watchcat is not set
 # CONFIG_PACKAGE_luci-app-webadmin is not set
@@ -5013,7 +4969,7 @@ CONFIG_PACKAGE_luci-app-wrtbwmon=y
 #
 # CONFIG_PACKAGE_luci-theme-Butterfly is not set
 # CONFIG_PACKAGE_luci-theme-Butterfly-dark is not set
-#CONFIG_PACKAGE_luci-theme-argon=y
+# CONFIG_PACKAGE_luci-theme-argon is not set
 # CONFIG_PACKAGE_luci-theme-argon-dark-mod is not set
 # CONFIG_PACKAGE_luci-theme-argon-light-mod is not set
 # CONFIG_PACKAGE_luci-theme-argon-mc is not set
@@ -5028,7 +4984,7 @@ CONFIG_PACKAGE_luci-theme-darkmatter=y
 # CONFIG_PACKAGE_luci-theme-infinityfreedom is not set
 # CONFIG_PACKAGE_luci-theme-material is not set
 # CONFIG_PACKAGE_luci-theme-neobird is not set
-# CONFIG_PACKAGE_luci-theme-netgear is not set
+CONFIG_PACKAGE_luci-theme-netgear=y
 # CONFIG_PACKAGE_luci-theme-netgearv2 is not set
 # CONFIG_PACKAGE_luci-theme-opentomato is not set
 # CONFIG_PACKAGE_luci-theme-opentomcat is not set
@@ -5170,8 +5126,6 @@ CONFIG_PACKAGE_luci-i18n-turboacc-mtk-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-upnp-vi is not set
 CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-upnp-zh-tw is not set
-CONFIG_PACKAGE_luci-i18n-usb-printer-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-vlmcsd-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-wireguard-ja is not set
 # CONFIG_PACKAGE_luci-i18n-wireguard-pt-br is not set
 # CONFIG_PACKAGE_luci-i18n-wireguard-ru is not set
@@ -5534,7 +5488,7 @@ CONFIG_PACKAGE_dns2tcp=y
 # CONFIG_PACKAGE_mdns-utils is not set
 # CONFIG_PACKAGE_mdnsd is not set
 # CONFIG_PACKAGE_mdnsresponder is not set
-CONFIG_PACKAGE_mosdns=y
+# CONFIG_PACKAGE_mosdns is not set
 # CONFIG_PACKAGE_nsd is not set
 # CONFIG_PACKAGE_nsd-control is not set
 # CONFIG_PACKAGE_nsd-control-setup is not set
@@ -5556,8 +5510,8 @@ CONFIG_PACKAGE_pdnsd-alt=y
 # CONFIG_PACKAGE_unbound-control-setup is not set
 # CONFIG_PACKAGE_unbound-daemon is not set
 # CONFIG_PACKAGE_unbound-host is not set
-CONFIG_PACKAGE_v2ray-geoip=y
-CONFIG_PACKAGE_v2ray-geosite=y
+# CONFIG_PACKAGE_v2ray-geoip is not set
+# CONFIG_PACKAGE_v2ray-geosite is not set
 # CONFIG_PACKAGE_wsdd2 is not set
 # CONFIG_PACKAGE_zonestitcher is not set
 # end of IP Addresses and Names
@@ -5671,7 +5625,7 @@ CONFIG_PACKAGE_v2ray-geosite=y
 # CONFIG_PACKAGE_cups-client is not set
 # CONFIG_PACKAGE_cups-filters is not set
 # CONFIG_PACKAGE_cups-ppdc is not set
-CONFIG_PACKAGE_p910nd=y
+# CONFIG_PACKAGE_p910nd is not set
 # end of Printing
 
 #
@@ -5951,7 +5905,7 @@ CONFIG_PACKAGE_shadowsocksr-libev-ssr-check=y
 CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
 # CONFIG_PACKAGE_shadowsocksr-libev-ssr-nat is not set
 CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
+# CONFIG_PACKAGE_shadowsocksr-libev-ssr-server is not set
 # CONFIG_PACKAGE_sing-box is not set
 # CONFIG_PACKAGE_sockd is not set
 # CONFIG_PACKAGE_socksify is not set
@@ -5983,9 +5937,8 @@ CONFIG_PACKAGE_mt_wifi=y
 #
 # MT_WIFI Configuration
 #
-# CONFIG_MTK_CHIP_MT7603E_MT7612E is not set
+CONFIG_MTK_CHIP_MT7603E_MT7612E=y
 # CONFIG_MTK_CHIP_MT7603E_MT7615E is not set
-# CONFIG_MTK_CHIP_MT7615E_DBDC is not set
 # CONFIG_MTK_CHIP_MT7915E_DBDC is not set
 # end of MT_WIFI Configuration
 
@@ -6309,7 +6262,7 @@ CONFIG_PACKAGE_uclient-fetch=y
 # CONFIG_PACKAGE_v2ray-core is not set
 # CONFIG_PACKAGE_vallumd is not set
 # CONFIG_PACKAGE_verysync is not set
-CONFIG_PACKAGE_vlmcsd=y
+# CONFIG_PACKAGE_vlmcsd is not set
 # CONFIG_PACKAGE_vncrepeater is not set
 # CONFIG_PACKAGE_vnstat is not set
 # CONFIG_PACKAGE_vpn-policy-routing is not set
@@ -6574,7 +6527,7 @@ CONFIG_PACKAGE_unzip=y
 #
 # Shells
 #
-CONFIG_PACKAGE_bash=y
+# CONFIG_PACKAGE_bash is not set
 # CONFIG_PACKAGE_fish is not set
 # CONFIG_PACKAGE_klish is not set
 # CONFIG_PACKAGE_mksh is not set
@@ -7075,7 +7028,7 @@ CONFIG_PACKAGE_ubi-utils=y
 # CONFIG_PACKAGE_uuidd is not set
 # CONFIG_PACKAGE_uuidgen is not set
 # CONFIG_PACKAGE_uvcdynctrl is not set
-CONFIG_PACKAGE_v2dat=y
+# CONFIG_PACKAGE_v2dat is not set
 # CONFIG_PACKAGE_v4l-utils is not set
 # CONFIG_PACKAGE_view1090 is not set
 # CONFIG_PACKAGE_watchcat is not set
